<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MK PVP Client</string>
    <string name="version_manager">版本管理</string>
    <string name="mod_manager">MOD管理</string>
    <string name="resource_pack">材质包</string>
    <string name="save_manager">存档管理</string>
    <string name="key_mapping">按键映射</string>
    <string name="settings">设置</string>
    <string name="play_game">启动游戏</string>
    <string name="download_version">下载版本</string>
    <string name="select_version">选择版本</string>
    <string name="no_version">未安装版本</string>
    <string name="accounts">账号管理</string>
    <string name="skin">皮肤管理</string>
    <string name="pvp_clients">PVP客户端</string>
    <string name="offline_mode">离线模式</string>
    <string name="online_mode">在线模式</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="add_account">添加账号</string>
    <string name="delete_account">删除账号</string>
    <string name="import_skin">导入皮肤</string>
    <string name="upload_skin">上传皮肤</string>
    <string name="steve">Steve</string>
    <string name="alex">Alex</string>
    <string name="cape">披风</string>
    <string name="moon_client">Moon Client</string>
    <string name="lion_client">Lion Client</string>
    <string name="cmpack_client">CM Pack</string>
    <string name="badlion_client">Badlion Client</string>
    <string name="labymod_client">LabyMod</string>
    <string name="download">下载</string>
    <string name="downloading">下载中...</string>
    <string name="install">安装</string>
    <string name="installed">已安装</string>
    <string name="fps_display">显示FPS</string>
    <string name="ping_display">显示延迟</string>
    <string name="keymacro">按键宏</string>
    <string name="auto_jump">自动跳跃</string>
    <string name="fast_place">快速放置</string>
    <string name="fast_break">快速破坏</string>
    <string name="reach_distance">攻击距离</string>
    <string name="click_speed">点击速度</string>
    <string name="moon_client_desc">顶级PVP客户端，支持多种游戏优化</string>
    <string name="lion_client_desc">专为Hypixel设计的PVP客户端</string>
    <string name="cmpack_desc">CM团队出品，优化性能与画质</string>
</resources>
